--- a/index.org
+++ b/index.org
@@ -2820,9 +2820,9 @@ I've been using a [fictitious dataset from a Statistics Methodology paper by Rit
 - the package REML will create a EML metadata document quite easily
 - I will assume that a lot of the data elements are self explanatory and take column names and factor levels as the descriptions
 
-*** reml_boilerplate-code
+*** DEPRECATED, SEE BELOW reml_boilerplate-code
 #+name:reml_boilerplate
-#+begin_src R :session *R* :tangle R/reml_boilerplate.r :exports reports :eval no
+#+begin_src R :session *R* :tangle no :exports reports :eval no
   ################################################################
   # name:reml_boilerplate
    
@@ -7133,8 +7133,8 @@ tags:
 #+end_src
 
 ** TODO xxx-adding-value-labels-to-reml-boilerplate
-#+name:adding-value-labels-to-reml-boilerplate-header
-#+begin_src markdown :tangle no :exports none :eval no :padline no
+*** adding-value-labels-to-reml-boilerplate-header
+#+begin_src R :tangle no :exports none :eval no :padline no
   ---
   name: adding-value-labels-to-reml-boilerplate
   layout: post
@@ -7179,23 +7179,51 @@ tags:
   # automated?
   #dat <- dat[,-4]
   dat
-  get_vals <- function(indat){
+  
+#+end_src
+
+*** COMMENT get_vals-code
+#+name:get_vals
+#+begin_src R :session *R* :tangle no :exports none :eval no
+  #### name:get_vals####
+  # this is a test
+  dat$dates <- as.Date(rep("2014-08-23", nrow(dat)))
+  str(dat)
+  #.dataframe <- analyte
+  get_vals <- function(.dataframe){
   str <- list()
-  for(i in 1:ncol(indat)){
-    #i = 1
-    if(is.numeric(indat[,i])){
-      v <- names(indat)[i]
-      str[[i]] <- paste(v,' = "number"',sep='')
-    } else {
-      x <- indat[,i]
+  for(i in 1:ncol(.dataframe)){
+    # i = 1
+    .variable <- names(.dataframe)[i]
+    #.dataframe[,.variable]
+      if(is.character(.dataframe[ ,.variable])){
+        .dataframe[,.variable]  <- factor(.dataframe[,.variable])
+      }
+  
+    if(is.factor(.dataframe[,.variable])){
+      x <- .dataframe[,.variable]
       vals <-  names(table(x))
-      v <- names(indat)[i]
+      # symbols pollute the string to parse
+      vals <- make.names(vals)
+      v <- .variable
       #v
-      str[[i]] <- paste(
+      str[[.variable]] <- paste(
       v, ' = c(',
       paste(vals, sep = '', collapse = ' = "TBA",')
       ,' = "TBA")', sep = '')
-      }
+    } else if(is.numeric(.dataframe[,.variable])){
+      v <- .variable
+  #    str[[.variable]] <- paste(v,' = "number"',sep='')
+      str[[.variable]] <- '"number"'
+      
+    } else if(
+      !all(is.na(as.Date(as.character(na.omit(.dataframe[,.variable])), origin = "1970-01-01")))
+      ){
+      v <- .variable    
+  #    str[[.variable]] <- paste(v,' = "YYYY-MM-DD"',sep='')
+      str[[.variable]] <- '"YYYY-MM-DD"'
+      
+      } 
     }
   #str
   str2 <- ""
@@ -7209,12 +7237,128 @@ tags:
     list(",str2,")", sep = "")
   #cat(str3)
   eval(parse(text = str3))
+  unit_metadata
   return(unit_metadata)
   }
   
   u1 <- get_vals(dat)
   u1
       
+#+end_src
+
+*** reml_boilerplate2-code
+#+name:reml_boilerplate
+#+begin_src R :session *R* :tangle R/reml_boilerplate2.r :exports reports :eval no
+  ################################################################
+  # name:reml_boilerplate
+   
+  # func
+  ## if(!require(EML)) {
+  ##   require(devtools)
+  ##   install_github("EML", "ropensci")
+  ##   } 
+  ## require(EML)
+  
+  reml_boilerplate2 <- function(data_set, outfile = NA, created_by = "Ivan Hanigan <ivanhanigan@gmail.com>", data_dir = getwd(), titl = NA)
+  {
+  
+    # next create a list from the data
+    unit_defs <- list()
+    for(i in 1:ncol(data_set))
+      {
+        # i = 4
+        if(is.numeric(data_set[,i])){
+          unit_defs[[i]] <- "number"
+        } else {
+          unit_defs[[i]] <- names(data_set)[i]
+        }
+      }
+  
+  # print helpful comments
+  cat(
+  sprintf('
+  # you just got a cheater\'s unit_defs
+  # we can get the col names easily
+  col_defs <- names(dat)
+  # then create a dataset with metadata
+  ds <- data.set(dat,
+                 col.defs = col_defs,
+                 unit.defs = unit_defs
+                 )
+  # now write EML metadata file
+  eml_config(creator="%s")
+  eml_write(ds,
+            file = "%s",
+            title = "%s"
+            )
+  
+  # now your metadata has been created
+  # if you want to add this to morpho and metacat it will needs something like
+  </dataFormat>
+    <distribution scope="document">
+      <online>
+        <url function="download">ecogrid://knb/hanigan.34.1</url>
+      </online>
+    </distribution>
+  </physical>', created_by, outfile, titl)
+  )
+  
+  
+    return(unit_defs)
+  
+   }
+#+end_src
+*** reml_boilerplate-test-code
+#+name:reml_boilerplate-test
+#+begin_src R :session *R* :tangle no :exports reports :eval no
+  ################################################################
+  # name:reml_boilerplate-test
+  library(EML)
+  require(devtools)
+  load_all()
+  #require(disentangle)
+  fpath <- system.file("extdata/civst_gend_sector_additional_variables.csv", package = "disentangle")
+  analyte <- read.csv(fpath, colClasses=c(ordinal_variable = "character"))
+  analyte <- read.csv(fpath, stringsAsFactor = F)
+  
+  str(analyte)
+  analyte$datevar <- as.Date(analyte$datevar)
+  analyte$ordinal_variable <- as.character(analyte$ordinal_variable)
+  analyte$fractions <- sample(rnorm(1000,0.1,0.1), nrow(analyte))
+  
+  str(analyte)
+  head(analyte)
+  unit_defs <- reml_boilerplate(
+    data_set = analyte,
+    created_by = "Ivan Hanigan <ivanhanigan@gmail.com>",
+    titl = "civst_gend_sector_full",
+    outfile = 'testing1234'
+    )
+  unit_defs
+  analyte2 <- analyte
+  analyte <- dat
+  unit_defs <- get_vals(analyte)
+  unit_defs
+    # we can get the col names easily
+    col_defs <- names(analyte)
+    # then create a dataset with metadata
+    ds <- data.set(analyte,
+                   col.defs = col_defs,
+                   unit.defs = unit_defs
+                   )
+    # now write EML metadata file
+    eml_config(creator="TBA <fakeaddress@gmail.com>")
+  outfile <- "testing43211234.csv"
+    eml_write(ds,
+              file = gsub(".csv", "_eml_skeleton.xml", outfile),
+              title = gsub(".csv", "", outfile)
+              )
+    tempfile <- dir(pattern="^data_table_")
+  tempfile
+    file.rename(tempfile, outfile)
+    # rename the CSV file.
+  
+  # dir("data")
 #+end_src
 
 * Exploratory Data Analysis
