--- a/index.org
+++ b/index.org
@@ -1696,6 +1696,61 @@ http://stackoverflow.com/questions/15686451/dates-from-excel-to-r-platform-depen
   
 #+end_src
 
+*** COMMENT sptransform-code
+#+name:sptransform
+#+begin_src R :session *R* :tangle no :exports none :eval no
+#### name:sptransform####
+  require(disentangle)
+  require(rgdal)
+  epsg <- make_EPSG()
+  
+  # defin inputs
+  datadir <- "data_provided/pr_bg_data_20140612/Data_tables/site_data/"
+  flist<-dir(datadir)
+  #flist
+  #change this
+  fname <- "Site_data.txt"
+  
+  # define outputs
+  outdir <- "ljbb_plot_details"
+  outfile <- "ljbb_plot_details.shp"
+  
+  # load
+  dat <- read.csv(
+    file.path(datadir, fname)
+    , header=TRUE)
+  
+  # clean
+  dat$Date.of.last.fire <-  as.Date(dat$Date.of.last.fire, "%d/%m/%Y")
+  #head(dat)
+  names(dat) <- tolower(gsub("\\.", "_", names(dat)))
+  # to match up with the site_number from the spotlighting data
+  dat$site_number <- paste("site_", dat$site_number, sep = "")
+  
+  # TODO check coordinate system code at spatialreference.org
+  # EPSG:20256: AGD66 / AMG zone 56
+  srid <- CRS(epsg$prj4[epsg$code %in% '20256'])
+  #srid
+  pts <- SpatialPointsDataFrame(cbind(dat$easting,dat$northing),dat,
+    proj4string=srid)
+  setwd(outdir)
+  writeOGR(pts, dsn = outfile, layer = gsub(".shp","", outfile), driver = "ESRI Shapefile")
+  setwd("..")
+  
+  #### and the csv
+  write.csv(pts@data, file.path(outdir, gsub(".shp", ".csv", outfile)), row.names = F)
+  
+  #### Bounding Box in lat/long ####
+  # work out the lat longs
+  latlong  <-  spTransform(pts, CRS("+init=epsg:4283"))
+  #summary(latlong@data[,c("easting", "northing")])
+  #str(latlong)
+  
+  bb <- morpho_bounding_box(latlong)
+  print(xtable(bb), type = "html")
+
+#+end_src
+
 ** TODO reshape
 *** TODO base:reshape
 
