--- a/index.org
+++ b/index.org
@@ -2085,6 +2085,32 @@ locs
 
 #+end_src
 
+** R find-missing-rows-code
+#+name:find-missing-rows
+#+begin_src R :session *R* :tangle no :exports none :eval no
+  #### name:find-missing-rows####
+  
+  fpath <- system.file(file.path("extdata", "civst_gend_sector_full.csv"), package = "disentangle")
+  fpath  
+  dat <- read.csv(fpath)
+  str(dat)
+  
+  dat[13,] <- rep(NA, ncol(dat))
+  
+  for(j in 1:ncol(dat)){
+  #  j = 1
+    dat[, j] <- gsub("\\#N/A", NA, dat[,j])
+    dat[, j] <- gsub("^$", NA, dat[,j])
+  }
+  # head(dat)
+  # tail(dat)
+  invalid <- apply(dat, 1, function(x) all(is.na(x)))
+  invalid[1:20]
+  dat[invalid,]
+  dat <- dat[!invalid,]
+    
+#+end_src
+
 * Data Output
 * Data Documentation
 ** COMMENT data-documentation-blogposts
@@ -7370,6 +7396,79 @@ tags:
   
    }
 #+end_src
+*** COMMENT reml_boilerplate3-code
+#+name:get_vals
+#+begin_src R :session *R* :tangle R/reml_boilerplate3.r :exports none :eval no
+  
+  reml_boilerplate3 <- function(.dataframe, enumerated = NA){
+  strng <- list()
+  for(i in 1:ncol(.dataframe)){
+  # i = 1
+    .variable <- names(.dataframe)[i]
+    #.dataframe[,.variable]
+      if(is.character(.dataframe[ ,.variable])){
+        .dataframe[,.variable]  <- factor(.dataframe[,.variable])
+      }
+  
+    if(is.factor(.dataframe[,.variable])  & i %in% enumerated){
+      x <- .dataframe[,.variable]
+      vals <-  names(table(x))
+      # symbols may pollute the string to parse
+      vals <- make.names(vals)
+      vals <- tolower(vals)  
+      vals <- gsub("\\.","_",vals)
+      vals <- gsub("_+","_",vals)    
+      v <- .variable
+      #v
+      strng[[.variable]] <- paste(
+      v, ' = c(',
+      paste(vals, sep = '', collapse = ' = "TBA",')
+      ,' = "TBA")', sep = '')
+    } else if(is.factor(.dataframe[,.variable])){
+      
+      strng[[.variable]] <- paste(
+        .variable, ' = "TBA"', sep = ''
+        )
+  
+    } else if(is.numeric(.dataframe[,.variable])){
+      v <- .variable
+      strng[[.variable]] <- paste(v,' = "number"',sep='')
+  #    strng[[.variable]] <- '"number"'
+      
+    } else if(
+      !all(is.na(as.Date(as.character(na.omit(.dataframe[,.variable])), origin = "1970-01-01")))
+      ){
+      v <- .variable    
+      strng[[.variable]] <- paste(v,' = "YYYY-MM-DD"',sep='')
+  #    strng[[.variable]] <- '"YYYY-MM-DD"'
+  
+    } else if (all(is.na(.dataframe[ ,.variable]))){
+      v <- .variable        
+      strng[[.variable]] <- paste(v,' = "', names(.dataframe)[i], '"', sep='')
+    }
+  }  
+  #strng
+  strng2 <- ""
+  for(n in 1:(length(strng)-1)){
+    strng2 <- paste(strng2, strng[[n]], ",\n")
+  }
+  strng2 <- paste(strng2, strng[[length(strng)]], "\n")
+  #cat(strng2)
+  strng3 <- paste("
+  unit_metadata =
+    list(",strng2,")", sep = "")
+  #cat(strng3)
+  eval(parse(text = strng3))
+  #unit_metadata
+  return(unit_metadata)
+  }
+  
+  #u1 <- get_vals(analyte)
+  #u1
+      
+#+end_src
+
+
 *** reml_boilerplate-test-code
 #+name:reml_boilerplate-test
 #+begin_src R :session *R* :tangle no :exports reports :eval no
@@ -7400,8 +7499,15 @@ tags:
   analyte2 <- analyte
   names(analyte)
   #analyte <- analyte2[,-c(6)]
-  unit_defs <- get_vals(analyte)
+  unit_defs <- reml_boilerplate2(analyte)
   unit_defs
+  
+  unit_defs <- reml_boilerplate3(analyte, enumerated = c(1,2,3,8))
+  unit_defs
+  
+  
+  
+  
     # we can get the col names easily
     col_defs <- names(analyte)
     # then create a dataset with metadata
